fix TeamClassLoaderFactory